log/build_2024-04-18_16-24-27/camera_oneday/stderr.log
  File "/home/addinedu/amr_ws/ros/camera_oneday/install/camera_oneday/lib/python3.10/site-packages/camera_oneday/camera_server.py", line 30
    def capture_callback(self, msg)
                                   ^
SyntaxError: expected ':'

